# triton-tutorial

./: pyproject.toml
notebooks/: 01_hello.ipynb  02_vector_add.ipynb  03_softmax.ipynb
