[project]
name = "triton-tut"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanjaya Subedi",email = "jangedoo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "triton (>=3.5.0,<4.0.0)",
    "lets-plot (>=4.7.3,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
flake8 = "^7.3.0"
black = "^25.9.0"
rope = "^1.14.0"
pytest = "^8.4.2"

